<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bliss_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_24sdp">

        <LinearLayout
            android:id="@+id/login_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bliss_card"
            android:elevation="8dp"
            android:orientation="vertical"
            android:padding="@dimen/_22sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit"
                android:text="Ely.by account"
                android:textColor="@color/copper_text"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/outfit"
                android:lineSpacingExtra="2dp"
                android:text="Sign in with your username, password, and optional two-factor code."
                android:textColor="@color/copper_text_muted"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/elyby_login_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:fontFamily="@font/outfit"
                android:text="@string/login_elyby_username_hint"
                android:textColor="@color/copper_text"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.kdt.mcgui.MineEditText
                android:id="@+id/elyby_login_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/elyby_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/outfit"
                android:text="@string/login_elyby_password_hint"
                android:textColor="@color/copper_text"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.kdt.mcgui.MineEditText
                android:id="@+id/elyby_password_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/elyby_totp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/outfit"
                android:text="@string/login_elyby_totp_hint"
                android:textColor="@color/copper_text"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.kdt.mcgui.MineEditText
                android:id="@+id/elyby_totp_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:textSize="@dimen/_14ssp" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/elyby_login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_54sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:text="@string/login_online_login_label" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/elyby_register_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_bliss_secondary_button"
                android:text="@string/login_elyby_register" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
