<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_menu_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_17sdp"
        android:paddingEnd="@dimen/_17sdp"
        android:paddingBottom="@dimen/_18sdp">

        <LinearLayout
            android:id="@+id/account_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_copper_card"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp">

            <com.kdt.mcgui.CircularAvatarView
                android:id="@+id/home_account_avatar"
                android:layout_width="@dimen/_72sdp"
                android:layout_height="@dimen/_72sdp"
                android:background="@drawable/bg_copper_avatar"
                android:padding="@dimen/_4sdp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit"
                    android:textColor="@color/copper_text"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold"
                    tools:text="Steve" />

                <TextView
                    android:id="@+id/home_account_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_copper_chip"
                    android:fontFamily="@font/outfit"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:textColor="@color/copper_highlight"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold"
                    tools:text="Microsoft" />
            </LinearLayout>
        </LinearLayout>

        <com.kdt.mcgui.MineButton
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_64sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/main_play"
            android:textAllCaps="true" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kdt.mcgui.mcVersionSpinner
                    android:id="@+id/mc_version_spinner"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:background="@drawable/bg_copper_chip"
                    android:drawableEnd="@drawable/spinner_arrow"
                    android:textColor="@color/copper_text"
                    app:drawableEndPadding="@dimen/_8sdp"
                    app:drawableEndSize="@dimen/_14sdp"
                    app:drawableStartIntegerScaling="true"
                    app:drawableStartSize="@dimen/_28sdp" />

                <TextView
                    android:id="@+id/version_type_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/bg_copper_chip"
                    android:fontFamily="@font/outfit"
                    android:gravity="center"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:textColor="@color/copper_highlight"
                    android:textStyle="bold"
                    tools:text="Vanilla" />

                <ImageButton
                    android:id="@+id/edit_profile_button"
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/bg_copper_chip"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_edit_profile"
                    android:tint="@color/copper_text" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:orientation="vertical">

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/custom_control_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:background="@drawable/bg_copper_card"
                android:drawableStart="@drawable/ic_menu_custom_controls"
                android:drawablePadding="@dimen/_12sdp"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/mcl_option_customcontrol"
                android:textColor="@color/copper_text" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/install_jar_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_copper_card"
                android:drawableStart="@drawable/ic_menu_install_jar"
                android:drawablePadding="@dimen/_12sdp"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/main_install_jar_file"
                android:textColor="@color/copper_text" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/share_logs_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_copper_card"
                android:drawableStart="@android:drawable/ic_menu_share"
                android:drawablePadding="@dimen/_12sdp"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/main_share_logs"
                android:textColor="@color/copper_text" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/open_files_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_copper_card"
                android:drawableStart="@drawable/ic_folder"
                android:drawablePadding="@dimen/_12sdp"
                android:paddingStart="@dimen/_16sdp"
                android:text="@string/mcl_button_open_directory"
                android:textColor="@color/copper_text" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
